# soundcloud-downloader

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: release.yml
include/sc/: api.hpp  client_id.hpp  crypto.hpp  downloader.hpp  hls.hpp  http.hpp  progress.hpp  tagger.hpp  transcoder.hpp  types.hpp  utils.hpp
src/: api.cpp  client_id.cpp  crypto.cpp  downloader.cpp  hls.cpp  http.cpp  main.cpp  progress.cpp  tagger.cpp  transcoder.cpp  utils.cpp
